--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-modern-drawer": "^1.4.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
